fix: comunication, frontend to backend
